--- a/src/scss/libs/_normalize.scss
+++ b/src/scss/libs/_normalize.scss
@@ -3,6 +3,7 @@
   margin: 0;
   list-style: none;
   outline: none;
+  border: none;
   font-family: "Nunito", Roboto, system-ui, Tahoma, sans-serif;
   box-sizing: border-box;
 }
@@ -15,18 +16,6 @@ html {
 body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  color: black;
-}
-
-a,
-span,
-p,
-b,
-h1,
-h2,
-h3,
-h4,
-h5 {
   color: black;
 }
 
