--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,6 +1,6 @@
 .header {
   height: 200px;
-  background: url("../../assets/img/header.jpg");
+  background: url("../../assets/img/header.jpg") no-repeat;
   display: flex;
   flex-direction: column;
   align-items: center;
