--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -3,6 +3,7 @@
 @import "components/search";
 @import "components/sort";
 @import "components/categories";
+@import "components/card";
 
 body {
   background-color: #d0d7de;
@@ -15,4 +16,22 @@ body {
   margin: 50px auto;
   border-radius: 10px;
   max-width: 1400px;
+  overflow: hidden;
+}
+
+.main {
+  padding: 20px;
+  &__results {
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: 500;
+  }
+  &__cards {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 30px;
+    row-gap: 20px;
+    align-items: center;
+    justify-content: center;
+  }
 }
