--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -35,3 +35,34 @@ body {
     justify-content: center;
   }
 }
+
+.popup {
+  position: absolute;
+  right: 0;
+  margin-top: 15px;
+  background: #ffffff;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.09);
+  border-radius: 10px;
+  overflow: hidden;
+  padding: 10px 0;
+  width: 160px;
+
+  ul {
+    overflow: hidden;
+
+    li {
+      color: black;
+      padding: 12px 20px;
+      cursor: pointer;
+
+      &.active,
+      &:hover {
+        background: rgba(70, 63, 61, 0.15);
+      }
+
+      &.active {
+        font-weight: bold;
+      }
+    }
+  }
+}
