--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,5 +1,6 @@
 .card {
   width: 300px;
+  height: 400px;
   display: flex;
   flex-direction: column;
   padding: 10px;
@@ -13,11 +14,13 @@
   }
 
   &__image {
-    width: 150px;
+    width: 250px;
+    height: 200px;
     align-self: center;
-
+    text-align: center;
     img {
-      width: 100%;
+      max-width: 250px;
+      max-height: 200px;
     }
   }
 
