--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -9,6 +9,9 @@
     margin-bottom: 20px;
     h1 {
       color: #ffffff;
+      @media (max-width: 420px) {
+        font-size: 36px;
+      }
     }
   }
 }
