--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -17,6 +17,10 @@ body {
   border-radius: 10px;
   max-width: 1400px;
   overflow: hidden;
+  @media (max-width: 540px) {
+    width: 100vw;
+    margin: 0;
+  }
 }
 
 .main {
@@ -45,7 +49,7 @@ body {
   border-radius: 10px;
   overflow: hidden;
   padding: 10px 0;
-  width: 160px;
+  width: 120px;
 
   ul {
     overflow: hidden;
