--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -31,6 +31,12 @@
 
   &__title {
     font-weight: 800;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
   }
 
   &__authors {
