--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -11,7 +11,7 @@ body {
 
 .wrapper {
   width: calc(100vw - 100px);
-  height: 100%;
+  min-height: calc(100vh - 100px);
   background-color: #fff;
   margin: 50px auto;
   border-radius: 10px;
@@ -19,6 +19,7 @@ body {
   overflow: hidden;
   @media (max-width: 540px) {
     width: 100vw;
+    min-height: 100vh;
     margin: 0;
   }
 }
@@ -37,6 +38,17 @@ body {
     row-gap: 20px;
     align-items: center;
     justify-content: center;
+  }
+}
+
+.no-results {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  &--title {
+    font-weight: 800;
+    font-size: 32px;
   }
 }
 
