--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -51,6 +51,19 @@ body {
   }
 }
 
+.not-found {
+  padding: 50px 0;
+  text-align: center;
+  font-size: 20px;
+  h2 {
+    padding-bottom: 20px;
+  }
+  a {
+    color: #1e90ff;
+    text-decoration: underline;
+  }
+}
+
 .popup {
   position: absolute;
   right: 0;
