Added Book Page

--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -4,6 +4,7 @@
 @import "components/sort";
 @import "components/categories";
 @import "components/card";
+@import "components/book";
 
 body {
   background-color: #d0d7de;
