--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -24,13 +24,28 @@ body {
   }
 }
 
+.home {
+  text-align: center;
+  padding: 50px;
+
+  &__image {
+    padding-bottom: 20px;
+  }
+
+  @media (max-width: 420px) {
+    padding: 20px;
+  }
+}
+
 .main {
   padding: 20px;
+
   &__results {
     text-align: center;
     margin-bottom: 20px;
     font-weight: 500;
   }
+
   &__cards {
     display: flex;
     flex-wrap: wrap;
@@ -46,6 +61,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
   &--title {
     font-weight: 800;
     font-size: 32px;
@@ -56,9 +72,11 @@ body {
   padding: 50px 0;
   text-align: center;
   font-size: 20px;
+
   h2 {
     padding-bottom: 20px;
   }
+
   a {
     color: #1e90ff;
     text-decoration: underline;
