--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -18,7 +18,7 @@ body {
   max-width: 1400px;
   overflow: hidden;
   @media (max-width: 540px) {
-    width: 100vw;
+    width: 100%;
     min-height: 100vh;
     margin: 0;
   }
